--- a/drafts/color-marquee2.html
+++ b/drafts/color-marquee2.html
@@ -109,8 +109,37 @@
 
 </body>
 
+    <script>
+      function genTokenData(projectNum) {
+
+        const tokenId = String(projectNum * 1000000 + Math.floor(Math.random() * 1000))
+        let hash = '0x'
+        if (window.location.search.includes('?hash=')) {
+          hash = window.location.search.slice(6)
+        } else {
+          for (let i = 0; i < 64; i++) {
+            hash += Math.floor(Math.random() * 16).toString(16)
+          }
+          window.location.hash = '#' + hash
+
+          const last10hashes = JSON.parse(localStorage.getItem('last10Hashes')) || []
+          last10hashes.unshift(hash)
+
+          localStorage.setItem('last10Hashes', JSON.stringify(last10hashes.slice(0, 10)))
+        }
+        return {
+          hash,
+          // hash: '0xfeff8806ffe0ff004900b6104392c062d40f238839029c82ed000ffff3cb2003',
+          tokenId
+        }
+      }
+
+      const tokenData = genTokenData(999)
+      console.log(tokenData.hash)
+    </script>
+
 <script src="./utils.js"></script>
-<script src="./components.js"></script>
+
 
 <script>
 /*
@@ -127,6 +156,95 @@
     - speaking guy
 */
 
+
+function times(t, fn) {
+  const out = []
+  for (let i = 0; i < t; i++) out.push(fn(i))
+  return out
+}
+
+
+
+function getXYRotation (deg, radius, cx=0, cy=0) {
+  return [
+    Math.sin(deg) * radius + cx,
+    Math.cos(deg) * radius + cy,
+  ]
+}
+
+
+function times(t, fn) {
+  const out = []
+  for (let i = 0; i < t; i++) out.push(fn(i))
+  return out
+}
+
+let __randomSeed = parseInt(tokenData.hash.slice(50, 58), 16)
+
+const resetRandomSeed = () => { __randomSeed = parseInt(tokenData.hash.slice(50, 58), 16) }
+
+function rnd(mn, mx) {
+  __randomSeed ^= __randomSeed << 13
+  __randomSeed ^= __randomSeed >> 17
+  __randomSeed ^= __randomSeed << 5
+  const out = (((__randomSeed < 0) ? ~__randomSeed + 1 : __randomSeed) % 1000) / 1000
+  if (mx != null) return mn + out * (mx - mn)
+  else if (mn != null) return out * mn
+  else return out
+}
+
+const rnd2 = (mn, mx) => {
+  const out = Math.random()
+  if (mx != null) return mn + out * (mx - mn)
+  else if (mn != null) return out * mn
+  else return out
+}
+
+
+function rndint(mn, mx) {
+  return parseInt(rnd(mn, mx))
+}
+
+function hshrnd(h) {
+  const str = tokenData.hash.slice(2 + h*2, 4 + h*2)
+  return parseInt(str, 16) / 255
+}
+
+const prb = x => rnd() < x
+
+const posOrNeg = () => prb(0.5) ? 1 : -1
+
+const sample = (a) => a[Math.floor(rnd(a.length))]
+const exists = x => !!x
+const last = a => a[a.length-1]
+
+function chance(...chances) {
+  const total = chances.reduce((t, c) => t + c[0], 0)
+  const seed = rnd()
+  let sum = 0
+  for (let i = 0; i < chances.length; i++) {
+    sum += chances[i][0] / total
+    if (seed <= sum) return chances[i][1]
+  }
+}
+  const marquee = (text, args) => {
+    const className = args.className || ''
+    const style = args.style || ''
+    const direction = args.direction || 1
+    const delay = args.delay || 0
+    const duration = args.duration || 1
+
+    return `
+      <div class="component marquee ${className}" style="${style}">
+        <div
+          class="marqueeInner ${direction === 1 ? 'marqueeForward' : 'marqueeReverse'} "
+          style="animation-delay: ${Math.floor(delay)}ms; animation-duration: ${duration*50}s;"
+        >
+          ${times(40, _ => text).join('')}
+        </div>
+      </div>
+    `
+  }
 
   const rows = sample([
     rndint(1, 2),
